# head_coach_dismissal

./: .gitignore  01 - Paper.ipynb  01 - Paper.md  02 - Data extraction.ipynb  03 - Preprocessing.ipynb  04 - Exploratory data analysis.ipynb  04 - Headcoach analysis.ipynb  05 - Match results analysis.ipynb  05 - Statistical analysis.ipynb  06 - Extending EDA.ipynb  07 - More preprocessing.ipynb  07 - Statistical analysis.ipynb  08 - Statistical analysis.ipynb  09 - Conclusion.md  LICENSE  Paper.md  README.md  TODO.md  _toc.yml  conf.py  environment.yml  myst.yml  pyproject.toml  reference.bib
data/: example.xlsx  extracted_match_results.csv  head_coach.csv  match_results.csv  match_results2.csv
misc/: SUJET.md
src/: 00 Data extraction.ipynb  01 Preprocessing.ipynb  02 - Data extraction.ipynb  02 Exploratory data analysis.ipynb  02 Headcoach analysis.ipynb  03 - Preprocessing.ipynb  03 Headcoach analysis.ipynb  03 Match results analysis.ipynb  04 - Headcoach analysis.ipynb  04 Statistical analysis.ipynb  05 - Match results analysis.ipynb  06 - Extending EDA.ipynb  07 - More preprocessing.ipynb  08 - Statistical analysis.ipynb  Dashboard.ipynb  More preprocessing.ipynb
src/data/: extracted_head_coach.csv  extracted_match_results.csv  head_coach.csv  match_results.csv  match_results2.csv
src/utils/: plotting.py
utils/: utils.py
